Making sure the footer offset is correctly set on small screens

--- a/resources/assets/sass/layout/_base.scss
+++ b/resources/assets/sass/layout/_base.scss
@@ -6,3 +6,9 @@ main {
   max-width: 1200px;
   min-height: calc(100vh - 152.5px);
 }
+
+@media (max-width: 599px) {
+  main {
+    min-height: calc(100vh - 144.5px);
+  }
+}
